--- a/.github/workflows/XDTesting.yml
+++ b/.github/workflows/XDTesting.yml
@@ -12,7 +12,7 @@ on:
     branches: 
       - main
     paths: 
-      - 'ontology-network/musical-performance-ontology/**'
+      - 'ontology-network/module1/**'
   workflow_dispatch:
  
 jobs:
@@ -28,66 +28,14 @@ jobs:
       - name: Checkout V2
         uses: actions/checkout@v2
       
-      - name: XDTesting Create directory
-        run: |
-            cd ontology-network
-            cd musical-performance-ontology
-            while read -r line; do
-            line="$line"
-            echo "Line read from file - $line" 
-            mkdir $line
-            cd $line
-            done < UserInput.txt
-            mkdir TestDocumentation
-            mkdir SPARQLUnitTest
-            mkdir InferenceVerificationTest
-            mkdir ErrorProvocationTest
-            touch CompetencyQuestions.txt
-            touch GeneralConstraints.txt
-            touch SPARQLQueries.txt
-            touch ExpectedResults.txt
-            touch $line.owl
-            cd SPARQLUnitTest
-            mkdir CQTestCase
-            mkdir CQDataSet
-            cd CQTestCase 
-            touch CQTestCase.ttl
-            cd ..
-            cd CQDataSet 
-            touch CQDataSet.ttl
-            cd ..
-            cd ..
-            cd InferenceVerificationTest
-            mkdir IVTestCase
-            mkdir IVDataSet
-            cd IVTestCase
-            touch IVTestCase.ttl
-            cd ..
-            cd IVDataSet
-            touch IVDataSet.ttl
-            cd ..
-            cd ..
-            cd ErrorProvocationTest
-            mkdir EPTestCase
-            mkdir EPDataSet
-            cd EPTestCase
-            touch EPTestCase.ttl
-            cd ..
-            cd EPDataSet
-            touch EPDataSet.ttl
-      
-      - name: Pull-to-master
-        uses: peter-evans/create-pull-request@v3
-      
       - name: XDTesting Check Input
         run: |
             cd ontology-network
-            cd musical-performance-ontology
+            cd module1
             while read -r line; do
             line="$line"
             echo "Line read from file - $line" 
             cd $line
-            # This script checks if the input that is necessary to run the test are non empty files. 
             counter=0
             for file in *.txt
             do 
@@ -143,7 +91,7 @@ jobs:
             base="https://raw.githubusercontent.com/"
             base1=$(git config --get remote.origin.url | sed 's/.*\/\([^ ]*\/[^.]*\).*/\1/')
             echo "$base2"
-            base2="/main/ontology-network/musical-performance-ontology/"
+            base2="/main/ontology-network/module1/"
             CQbase="/SPARQLUnitTest/CQTestCase/"
             echo "$CQtestcase"
             CQtestcase="$base$base1$base2$line$CQbase"
