--- a/.github/workflows/XDTesting.yml
+++ b/.github/workflows/XDTesting.yml
@@ -83,7 +83,7 @@ jobs:
       - name: Run CQ test
         run: |
             cd ontology-network
-            cd musical-performance-ontology
+            cd module1
             while read -r line; do
             line="$line"
             # echo "CC is $line"
