--- a/.github/workflows/XDTesting.yml
+++ b/.github/workflows/XDTesting.yml
@@ -108,7 +108,7 @@ jobs:
              cd ..
              cd ..
              cd ..
-             output=((java -jar OWLUnit-0.3.2.jar -c $testcaseURL))
+             output=$(java -jar OWLUnit-0.3.2.jar -c $testcaseURL)
              cd TestDocumentation
              echo "$output" >> DocCase.txt
             done          
