--- a/.github/workflows/XDTesting.yml
+++ b/.github/workflows/XDTesting.yml
@@ -109,6 +109,9 @@ jobs:
              cd ..
              cd ..
              output=$(java -jar OWLUnit-0.3.2.jar -c $testcaseURL)
+             cd ontology-network
+             cd module1
+             cd $line
              cd TestDocumentation
              echo "$output" >> DocCase.txt
             done          
