--- a/.github/workflows/XDTesting.yml
+++ b/.github/workflows/XDTesting.yml
@@ -110,13 +110,13 @@ jobs:
              cd ..
              output=$(java -jar OWLUnit-0.3.2.jar -c $testcaseURL)
             done
-            done < UserInput.txt
             cd ontology-network
             cd module1
-            cd Situation1
+            cd $line
             cd TestDocumentation
             touch DocCase.txt
             echo "$output" >> DocCase.txt
+            done < UserInput.txt
         # This step creates an automatic pull request for the directories that were created.      
       - name: Pull-to-master
         uses: peter-evans/create-pull-request@v3
