--- a/.github/workflows/validate-json.yml
+++ b/.github/workflows/validate-json.yml
@@ -11,4 +11,4 @@ jobs:
         uses: docker://orrosenblatt/validate-json-action:latest
         env:
           INPUT_SCHEMA: ./jsonSchema.json
-          INPUT_JSONS: XD-Testing/jsonExample.json
+          INPUT_JSONS: ./jsonExample.json
