--- a/.github/workflows/validate-json-python.yml
+++ b/.github/workflows/validate-json-python.yml
@@ -11,4 +11,4 @@ jobs:
       - name: Run JSON validator
         run: |
           extectedResult="""{ "head": { "vars": [ "interest" ] }, "results": { "bindings": [{ "interest": { "type": "uri", "value": "https://w3id.org/OWLunit/examples/Basketball" } } ] } }"""
-          python .github/script/validateJSON.py extectedResult
+          print(python .github/script/validateJSON.py extectedResult)
