--- a/.github/workflows/validate-json-python.yml
+++ b/.github/workflows/validate-json-python.yml
@@ -12,4 +12,4 @@ jobs:
         run: |
           extectedResult="""{ "head": { "vars": [ "interest" ] }, "results": { "bindings": [{ "interest": { "type": "uri", "value": "https://w3id.org/OWLunit/examples/Basketball" } } ] } }"""
           result=$(python .github/script/validateJSON.py extectedResult)
-          cat result
+          cat $result
