--- a/.github/workflows/validate-sparql.yml
+++ b/.github/workflows/validate-sparql.yml
@@ -12,7 +12,6 @@ jobs:
           pip install rdflib
       - name: Run SPARQL validator
         run: |
-          param=3
-          python .github/script/command-line.py $param
-# python .github/script/validateSPARQL.py "SELECT ?info ?name WHERE {?person rdfs:seeAlso ?info . ?person foaf:homepage ?name .}"
-#   query="SELECT ?info ?name WHERE {?person rdfs:seeAlso ?info . ?person foaf:homepage ?name .}"
+          param="SELECT ?info ?name WHERE {?person rdfs:seeAlso ?info . ?person foaf:homepage ?name .}"
+          python .github/script/validateSPARQL.py $param
+
