--- a/.github/workflows/validate-sparql.yml
+++ b/.github/workflows/validate-sparql.yml
@@ -13,6 +13,6 @@ jobs:
       - name: Run SPARQL validator
         run: |
           param="SELECT \?info \?name WHERE {\?person rdfs:seeAlso \?info . \?person foaf:homepage \?name .}"
-          cat $param
+          echo $param
           python .github/script/validateSPARQL.py $param
 
