--- a/.github/workflows/validate-sparql.yml
+++ b/.github/workflows/validate-sparql.yml
@@ -14,6 +14,6 @@ jobs:
         run: |
           param="SELECT ?info ?name WHERE {?person rdfs:seeAlso ?info . ?person foaf:homepage ?name .}"
           echo $param
-          scriptResult=$(python3 .github/script/validateSPARQL.py $param)
+          scriptResult=$(python3 .github/script/validateSPARQL.py)
           echo $scriptResult
 
