--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -31,7 +31,7 @@ jobs:
           cd ontology-network
           cd module1
           cd Situation
-          bash XD-Testing/.github/script/getCQ.sh
+          bash /.github/script/getCQ.sh
       
       
     
