--- a/.github/workflows/create-directory-structure.yml
+++ b/.github/workflows/create-directory-structure.yml
@@ -30,7 +30,7 @@ jobs:
       - name: read-line
         run: |
             cd ontology-network
-            cd module1
+            cd musical-performance
             while read -r line; do
             line="$line"
             echo "Line read from file - $line" 
