--- a/.github/workflows/XDTesting.yml
+++ b/.github/workflows/XDTesting.yml
@@ -1,6 +1,6 @@
 # This is a workflow that is able to automate the testing procedure of XD. 
-# Trigger: A commit to the UserInput.txt.
-# Input: The user input file to get the name of the cc that we are testing. 
+# Trigger: A commit to the input file.
+# Input: Input files from the ontology engineers. 
 # Output: The execution of a test case. 
 
 # The name of the workflow
@@ -31,10 +31,9 @@ jobs:
       - name: XDTesting Check Input
         run: |
             cd ontology-network
-            cd module1
+            cd musical-performance
             while read -r line; do
             line="$line"
-            echo "Line read from file - $line" 
             cd $line
             counter=0
             for file in *.txt
@@ -83,15 +82,15 @@ jobs:
       - name: Run CQ test
         run: |
             cd ontology-network
-            cd module1
+            cd musical-performance
             while read -r line; do
             line="$line"
-            # echo "CC is $line"
+            # echo "Ontology fragment is $line"
             cd $line
             base="https://raw.githubusercontent.com/"
             base1=$(git config --get remote.origin.url | sed 's/.*\/\([^ ]*\/[^.]*\).*/\1/')
             echo "$base2"
-            base2="/main/ontology-network/module1/"
+            base2="/main/ontology-network/musical-performance/"
             CQbase="/SPARQLUnitTest/CQTestCase/"
             echo "$CQtestcase"
             CQtestcase="$base$base1$base2$line$CQbase"
