--- a/.github/workflows/crosscheck-input.yml
+++ b/.github/workflows/crosscheck-input.yml
@@ -36,7 +36,7 @@ jobs:
       - name: check-input
         run: |
             cd ontology-network
-            cd musical-performance-ontology
+            cd musical-performance
             while read -r line; do
             line="$line"
             echo "Line read from file - $line" 
