--- a/.github/workflows/XDTesting.yml
+++ b/.github/workflows/XDTesting.yml
@@ -21,7 +21,7 @@ jobs:
   # The type of runner that the job will run on.
     runs-on: ubuntu-latest
     env:
-      input-check: False
+      check: False
     
     # Check out the repository where the action is going to be executed on.
     steps:
@@ -52,11 +52,11 @@ jobs:
             done < UserInput.txt
             if ((counter<4))
               then 
-                $input-check: False
+                $check: False
               else
-                $input-check: True
+                $check: True
             fi
-            echo $input-check
+            echo $check
       
         
       - name: Setup-JAVA
