--- a/.github/workflows/SPARQL-val.yml
+++ b/.github/workflows/SPARQL-val.yml
@@ -8,6 +8,10 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       
+      - name: Install rdflib 
+        run: |
+          pip install rdflib
+      
       - name: Run SPARQL validator
         run: |
           function SPARQL_Validator {
