--- a/.github/workflows/SPARQL-val.yml
+++ b/.github/workflows/SPARQL-val.yml
@@ -18,6 +18,7 @@ jobs:
       
       - name: Run SPARQL validator
         run: |
+          function SPARQL_Validator {
           validator_result="$(my_query="SELECT ?info ?name WHERE { ?person rdfs:seeAlso ?info . ?person foaf:homepage ?name .}" python3 - <<END
           import rdflib
           from rdflib.plugins.sparql import prepareQuery
@@ -32,7 +33,9 @@ jobs:
             return True
           except Exception as error:
             print(error)
-          END )"
+          END)"
           
           # Call the python code.
           echo "Python value is: $validator_result"
+          }
+          SPARQL_Validator
