--- a/.github/workflows/SPARQL-val.yml
+++ b/.github/workflows/SPARQL-val.yml
@@ -33,7 +33,8 @@ jobs:
             return True
           except Exception as error:
             print(error)
-          END)"
+          END
+          )"
           
           # Call the python code.
           echo "Python value is: $validator_result"
